| Summary: | ASTERISK-23062: res_pjsip AOR config option qualify_frequency is inconsistently respected | ||||
| Reporter: | Rusty Newton (rnewton) | Labels: | |||
| Date Opened: | 2013-12-23 12:20:07.000-0600 | Date Closed: | 2014-01-16 14:13:33.000-0600 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Resources/res_pjsip | ||
| Versions: | SVN 12.0.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Asterisk SVN-branch-12-r404531 | Attachments: | ( 0) cli_command_output.txt ( 1) missing_options_full.txt ( 2) missing_options.pcap ( 3) pjsip.conf.txt | ||
| Description: | *Reproduction:*
* Configure a few endpoints as seen in the attached configuration * Start up Asterisk, watch for Asterisk to send OPTIONS out on the frequency specified in qualify_frequency * You should see that for one or more of the endpoints, the OPTIONS are not sent on the frequency specified. In my case for the endpoints that don't get OPTIONS sent, the OPTIONS are never sent until I stop and start Asterisk again. *Notes:* You may have to restart a few times to see it happen. When it does happen, I've waited as long as 15 minutes to verify the OPTIONS are not sent at a later time. All devices are registered and available. I can make calls between them. *Debug:* The debug attached shows an instance where three of the four endpoints do not have OPTIONS being generated. Only 6004 has OPTIONS sent to it. Packet capture, full log and some CLI command output attached. | ||||
| Comments: | By: Rusty Newton (rnewton) 2013-12-23 12:30:46.620-0600 Attached pjsip config with my irrelevant ITSP sip endpoint trimmed out. Ignore my oddly named transport - forgot to rename it from a previous config. :) | ||||